Fix issue with popover hidden behind transform'd .content elements.

--- a/src/views/css/list-view.less
+++ b/src/views/css/list-view.less
@@ -25,11 +25,6 @@
         width: 100%;
         border: 1px solid rgba(0,0,0,0.15);
         border-radius: 3px;
-        -webkit-transform: rotateY(0deg);
-        -moz-transform: rotateY(0deg);
-        -ms-transform: rotateY(0deg);
-        -o-transform: rotateY(0deg);
-        transform: rotateY(0deg);
     }
 }
 
